@@ -392,6 +392,7 @@ transform.test \
 unused.test \
 vars.test \
 vars2.test \
+vars3.test \
 vartar.test \
 version.test \
 version2.test \
