@@ -5,6 +5,7 @@
 . $srcdir/defs || exit 1
 
 cat > Makefile.am << 'END'
+AUTOMAKE_OPTIONS = -Wno-portability
 ICONS := $(wildcard *.xbm)
 data_DATA = $(ICONS)
 END
