@@ -1,5 +1,16 @@
 2002-08-23  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	For PR automake/347:
+	* automake.in (MACRO_PATTERN): Allow `.' in variable names.
+	(scan_variable_expansions, check_variable_expansions): New functions.
+	(macro_define): Call check_variable_expansions.
+	(read_am_file): Likewise, when outputing rules.
+	(variable_conditions_recursive_sub): Simplify using
+	scan_variable_expansions.
+	* tests/vars3.test: New file.
+	* tests/Makefile.am (TESTS): Add vars3.test.
+	* tests/colneq.test: Use -Wno-portability.
+
 	* lib/Automake/Channels.pm (buffering, backlog): New variables.
 	(buffer_messages, flush_messages): New functions.
 	(@EXPORT): Add buffer_messages and flush_messages.
